# python-cicd-demo

./: .dockerignore  .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml  test_main.py
.github/workflows/: main.yml
templates/: index.html
